<package>
  <name>nxt_description</name>
  <version>1.0.0</version>
  <description>nxt_description contains the nxt collada models for nxt_ros. The collada models are created from  
     ldraw.org part models and are named by part number.</description>
  <maintainer email="mwise@willowgarage.com">Melonee Wise</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/nxt_description</url>
  <!-- <url type="bugtracker"></url> -->

  <author>Melonee Wise</author>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies needed to compile this package. -->

  <!-- Dependencies needed after this package is compiled. -->

  <!-- Dependencies needed only for running tests. -->

</package>