<package>
  <name>nxt_lxf2urdf</name>
  <version>1.0.0</version>
  <description>nxt_lxf2urdf converts a</description>
  <maintainer email="mwise@willowgarage.com">Melonee Wise</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/nxt_lxf2urdf</url>
  <!-- <url type="bugtracker"></url> -->

  <author>Melonee Wise</author>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies needed to compile this package. -->

  <!-- Dependencies needed after this package is compiled. -->

  <!-- Dependencies needed only for running tests. -->

</package>