<package>
  <name>nxt_msgs</name>
  <version>1.0.0</version>
  <description>The nxt_msgs package contains a set of messages to publish data coming from various NXT sensor.</description>
  <maintainer email="meeussen@willowgarage.com">Wim Meeussen</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/nxt_msgs</url>
  <!-- <url type="bugtracker"></url> -->

  <author>Wim Meeussen</author>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies needed to compile this package. -->
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>

  <!-- Dependencies needed after this package is compiled. -->
  <run_depend>std_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>

  <!-- Dependencies needed only for running tests. -->
  <!-- <test_depend>std_msgs</test_depend> -->
  <!-- <test_depend>geometry_msgs</test_depend> -->

</package>