<package>
  <name>nxt_python</name>
  <version>1.0.0</version>
  <description>This package automatically downloads version 1.1.2 of the</description>
  <maintainer email="unknown@example.com">Douglas P Lau.</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/nxt_python</url>
  <!-- <url type="bugtracker"></url> -->

  <author>Douglas P Lau.</author>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies needed to compile this package. -->
  <build_depend>rospy</build_depend>

  <!-- Dependencies needed after this package is compiled. -->
  <run_depend>rospy</run_depend>

  <!-- Dependencies needed only for running tests. -->
  <!-- <test_depend>rospy</test_depend> -->

<export>
    <doxymaker external="http://code.google.com/p/nxt-python"/>
    <rosdoc config="rosdoc.yaml"/>
</export>

</package>