<package>
  <name>nxt_apps</name>
  <version>1.0.0</version>
  <description>nxt_apps package provides a set of common applications that can be run with the robots provided in the nxt_robot stack or 
    other custom made robots.</description>
  <maintainer email="tfoote@willowgarage.com">Tully Foote</maintainer>
  <maintainer email="meeussen@willowgarage.com">Wim Meeussen</maintainer>
  <maintainer email="mwise@willowgarage.com">Melonee Wise</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/nxt_apps</url>
  <!-- <url type="bugtracker"></url> -->

  <author>Tully Foote</author>
  <author>Wim Meeussen</author>
  <author>Melonee Wise</author>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies needed to compile this package. -->


  <!-- Dependencies needed after this package is compiled. -->
  <run_depend>nxt_assisted_teleop</run_depend>
  <run_depend>nxt_teleop</run_depend>

  <!-- Dependencies needed only for running tests. -->







</package>
