<package>
  <name>nxt_assisted_teleop</name>
  <version>1.0.0</version>
  <description>nxt_assisted_teleop</description>
  <maintainer email="meeussen@willowgarage.com">Wim Meeussen</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/nxt_assisted_teleop</url>
  <!-- <url type="bugtracker"></url> -->

  <author>Wim Meeussen</author>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies needed to compile this package. -->
  <build_depend>nxt_ros</build_depend>
  <build_depend>nxt_robot_sensor_car</build_depend>
  <build_depend>nxt_robot_gyro_car</build_depend>
  <build_depend>costmap_2d</build_depend>
  <build_depend>base_local_planner</build_depend>

  <!-- Dependencies needed after this package is compiled. -->
  <run_depend>nxt_ros</run_depend>
  <run_depend>nxt_robot_sensor_car</run_depend>
  <run_depend>nxt_robot_gyro_car</run_depend>
  <run_depend>costmap_2d</run_depend>
  <run_depend>base_local_planner</run_depend>

  <!-- Dependencies needed only for running tests. -->
  <!-- <test_depend>nxt_ros</test_depend> -->
  <!-- <test_depend>nxt_robot_sensor_car</test_depend> -->
  <!-- <test_depend>nxt_robot_gyro_car</test_depend> -->
  <!-- <test_depend>costmap_2d</test_depend> -->
  <!-- <test_depend>base_local_planner</test_depend> -->

</package>