<package>
  <name>nxt_teleop</name>
  <version>1.0.0</version>
  <description>nxt_teleop provides keyboard and joystick interfaces for some of nxt robots provided in the nxt_robots stack.</description>
  <maintainer email="meeussen@willowgarage.com">Wim Meeussen</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/nxt_teleop</url>
  <!-- <url type="bugtracker"></url> -->

  <author>Wim Meeussen</author>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies needed to compile this package. -->
  <build_depend>nxt_ros</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>joy</build_depend>

  <!-- Dependencies needed after this package is compiled. -->
  <run_depend>nxt_ros</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>joy</run_depend>

  <!-- Dependencies needed only for running tests. -->
  <!-- <test_depend>nxt_ros</test_depend> -->
  <!-- <test_depend>geometry_msgs</test_depend> -->
  <!-- <test_depend>joy</test_depend> -->

</package>