<package>
  <name>nxt_robot_gyro_car</name>
  <version>1.0.0</version>
  <description>The nxt_robot_gyro_car package provides a starting nxt robot. For instructions on building
     the nxt robot load the gyro_car.lxf into the LEGO Digital Designer</description>
  <maintainer email="mwise@willowgarage.com">Melonee Wise</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/nxt_robot_gyro_car</url>
  <!-- <url type="bugtracker"></url> -->

  <author>Melonee Wise</author>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies needed to compile this package. -->
  <build_depend>nxt_ros</build_depend>
  <build_depend>nxt_controllers</build_depend>
  <build_depend>robot_pose_ekf</build_depend>
  <build_depend>nxt_description</build_depend>
  <build_depend>robot_state_publisher</build_depend>

  <!-- Dependencies needed after this package is compiled. -->
  <run_depend>nxt_ros</run_depend>
  <run_depend>nxt_controllers</run_depend>
  <run_depend>robot_pose_ekf</run_depend>
  <run_depend>nxt_description</run_depend>
  <run_depend>robot_state_publisher</run_depend>

  <!-- Dependencies needed only for running tests. -->
  <!-- <test_depend>nxt_ros</test_depend> -->
  <!-- <test_depend>nxt_controllers</test_depend> -->
  <!-- <test_depend>robot_pose_ekf</test_depend> -->
  <!-- <test_depend>nxt_description</test_depend> -->
  <!-- <test_depend>robot_state_publisher</test_depend> -->

</package>